--- a/Contact.html
+++ b/Contact.html
@@ -43,7 +43,7 @@
                         </li>
                         <li class="nav-item"><a href="index.html#area" class="nav-link">Areas</a></li>
                         <li class="nav-item"><a href="Contact.html" class="nav-link active-link">Contact Us</a></li>
-                        <li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li>
+                        <li class="nav-item"><a href="Pricing.html" class="nav-link">Pricing</a></li>
                         <li class="nav-item"><a href="#" class="nav-link"><i class="bi bi-search"></i></a></li>
                         <li class="nav-item"><a href="#" class="btn btn-outline-success me-2">Sign In</a></li>
                         <li class="nav-item"><a href="#" class="btn btn-success">Sign Up</a></li>
