--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <section class="services py-5">
         <div class="container text-center">
             <p class="green-text fw-semibold small text-uppercase mb-1">OUR SERVICES</p>
-            <h2 class="fw-bold mb-5 position-relative d-inline-block">
+            <h2 class="fw-bold mb-5 d-inline-block">
                 Explore Services Available On Platform
                 <span class="underline"></span>
             </h2>
