--- a/Faq.html
+++ b/Faq.html
@@ -48,8 +48,8 @@
                         <li class="nav-item"><a href="Contact.html" class="nav-link">Contact Us</a></li>
                         <li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li>
                         <li class="nav-item"><a href="#" class="nav-link"><i class="bi bi-search"></i></a></li>
-                        <li class="nav-item"><a href="#" class="btn btn-outline-success me-2">Sign In</a></li>
-                        <li class="nav-item"><a href="#" class="btn btn-success">Sign Up</a></li>
+                        <li class="nav-item"><a href="./Sign-in.html" class="btn btn-outline-success me-2">Sign In</a></li>
+                        <li class="nav-item"><a href="./Sign-Up.html" class="btn btn-success">Sign Up</a></li>
                     </ul>
                 </div>
             </div>
