--- a/index.html
+++ b/index.html
@@ -58,28 +58,44 @@
     </nav>
 
     <!-- ================= HERO SECTION ================= -->
-    <section class="hero">
-        <div class="container">
-            <div class="hero-content">
-                <p class="hero-tag">Welcome To Quote Green</p>
+ <!-- ================= HERO SECTION ================= -->
+<section class="hero-banner">
 
-                <h1>The Easiest Sales Tool For An Outdoor Service Company</h1>
+    <!-- Background Color Left + Image Right -->
+    <div class="hero-bg"></div>
+    <div class="hero-img-box">
+        <img src="./images/banner_left_img.png" alt="Worker" class="hero-img">
+    </div>
 
-                <p class="hero-description">
-                    Libero vehicula erat est vivamus donec netus dapibus nibh elementum penatibus.
-                    Elit cursus enim ipsum.
-                </p>
+    <!-- TEXT IN CONTAINER ONLY -->
+    <div class="container">
+        <div class="hero-content">
 
-                <form class="hero-form">
-                    <div class="input-wrapper">
-                        <span class="icon"><i class="bi bi-envelope"></i></span>
-                        <input type="email" class="form-control" placeholder="Enter email address">
-                        <button class="btn-yellow" type="button">Get Pricing</button>
-                    </div>
-                </form>
-            </div>
+            <p class="hero-tag">WELCOME TO QUOTE GREEN</p>
+
+            <h1 class="hero-title">
+                The Easiest Sales Tool For An Outdoor Service Company
+            </h1>
+
+            <p class="hero-desc">
+                Libero vehicula erat est vivamus donec netus dapibus nibh elementum penatibus.
+                Elit cursus enim ipsum.
+            </p>
+
+            <form class="hero-form">
+                <div class="input-wrapper">
+                    <span class="icon"><i class="bi bi-envelope"></i></span>
+                    <input type="email" class="form-control" placeholder="Enter email address">
+                    <button class="btn-yellow" type="button">Get Pricing</button>
+                </div>
+            </form>
+
         </div>
-    </section>
+    </div>
+
+</section>
+
+
 
     <!-- ================= ABOUT SECTION ================= -->
     <section class="about-section py-5">
