--- a/index.html
+++ b/index.html
@@ -474,14 +474,13 @@
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#faq1">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit?
+                            How does Quote Green generate instant quotes for customers?
                         </button>
                     </h2>
                     <div id="faq1" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                         <div class="accordion-body">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Lorem ipsum dolor
-                            sit amet
-                            consectetur.
+                            We use map-based measurement tools and pre-set pricing rules set by your business.
+Once a customer enters their address, our system automatically measures the area and generates an instant quote—no manual estimating required.
                         </div>
                     </div>
                 </div>
@@ -490,12 +489,13 @@
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#faq2">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit?
+                            Can I customize the prices shown to customers?
                         </button>
                     </h2>
                     <div id="faq2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                         <div class="accordion-body">
-                            Lorem ipsum dolor sit amet consectetur adipiscing elit. Nulla facilisi.
+                            Yes. You have full control over pricing, service categories, packages and discounts.
+You can update them anytime from your dashboard.
                         </div>
                     </div>
                 </div>
@@ -504,12 +504,13 @@
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#faq3">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit?
+                            Do customers need to create an account to receive a quote?
                         </button>
                     </h2>
                     <div id="faq3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                         <div class="accordion-body">
-                            Lorem ipsum dolor sit amet consectetur adipiscing elit. Nulla facilisi.
+                            No. Customers can enter their address, view services and pricing instantly.
+They only create an account if they want to proceed with booking.
                         </div>
                     </div>
                 </div>
@@ -518,12 +519,13 @@
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#faq4">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit?
+                            Can customers pay online after receiving a quote?
                         </button>
                     </h2>
                     <div id="faq4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                         <div class="accordion-body">
-                            Lorem ipsum dolor sit amet consectetur adipiscing elit. Nulla facilisi.
+                            Absolutely. We support secure online payments through credit/debit cards and popular payment gateways.
+Once paid, you receive a booking confirmation instantly.
                         </div>
                     </div>
                 </div>
