--- a/Forget-pswrd.html
+++ b/Forget-pswrd.html
@@ -18,8 +18,9 @@
 
         <div class="auth-left">
             <div class="auth-container">
-                <img src="./images/logo.png" alt="Logo" class="logo">
-
+                <a href="./index.html">
+                    <img src="./images/logo.png" alt="Logo" class="logo">
+                </a>
                 <h2 class="auth-title">Forgot Password?</h2>
                 <p class="auth-subtitle">Enter your email address to get reset link.</p>
 
