--- a/Sign-Up.html
+++ b/Sign-Up.html
@@ -5,43 +5,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up — Quote Green</title>
+
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="./favicon_io/favicon.ico">
 
+    <!-- Your CSS -->
     <link rel="stylesheet" href="./css/sign_up.css">
 </head>
 
 <body>
     <div class="auth-wrapper d-flex">
+
         <!-- Left Side -->
         <div class="auth-left d-flex align-items-center justify-content-center">
             <div class="auth-container">
-                <img src="./images/logo.png" alt="Quote Green Logo" class="auth-logo mb-3">
-
+                <a href="./index.html">
+                    <img src="./images/logo.png" alt="Quote Green Logo" class="auth-logo mb-3">
+                </a>
                 <h2 class="auth-title">Sign Up With Quote Green</h2>
                 <p class="auth-subtitle mb-4">Enter your details to continue</p>
 
                 <form>
-                    <!-- FIRST NAME -->
-                     <div class="row g-3">
-                    <div class="col-md-6 mb-3">
-                        <label class="form-label input-label">First Name *</label>
-                        <input type="text" class="form-control auth-input" placeholder="Enter first name">
-                    </div>
+                    <!-- FIRST + LAST NAME -->
+                    <div class="row g-3">
+                        <div class="col-md-6 mb-3">
+                            <label class="form-label input-label">First Name *</label>
+                            <input id="firstName" type="text" class="form-control auth-input"
+                                placeholder="Enter first name">
+                        </div>
 
-                    <!-- LAST NAME -->
-                    <div class="col-md-6">
-                        <label class="form-label input-label">Last Name *</label>
-                        <input type="text" class="form-control auth-input" placeholder="Enter last name">
-                    </div>
+                        <div class="col-md-6">
+                            <label class="form-label input-label">Last Name *</label>
+                            <input id="lastName" type="text" class="form-control auth-input"
+                                placeholder="Enter last name">
+                        </div>
                     </div>
 
                     <!-- EMAIL -->
                     <div class="mb-3">
                         <label class="form-label input-label">Email Address *</label>
-                        <input type="email" class="form-control auth-input" placeholder="john.doe@companyname.com">
+                        <input id="email" type="email" class="form-control auth-input"
+                            placeholder="john.doe@companyname.com">
                     </div>
 
                     <!-- PHONE WITH COUNTRY DROPDOWN -->
@@ -54,6 +64,7 @@
                                     id="countryDropdown" data-bs-toggle="dropdown">
                                     <img src="./images/usa.png" class="flag-icon" alt="us"> +1
                                 </button>
+
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item d-flex align-items-center"><img src="./images/usa.png"
                                                 class="flag-icon"> +1 USA</a></li>
@@ -64,29 +75,32 @@
                                 </ul>
                             </div>
 
-                            <input type="text" class="form-control ms-2 auth-input" placeholder="000 111 0101">
+                            <input id="phone" type="text" class="form-control ms-2 auth-input" placeholder="0001110101">
                         </div>
                     </div>
 
                     <!-- BUSINESS REGISTRATION NUMBER -->
                     <div class="mb-3">
                         <label class="form-label input-label">Business Registration Number *</label>
-                        <input type="text" class="form-control auth-input" placeholder="Enter business registration">
+                        <input id="businessReg" type="text" class="form-control auth-input"
+                            placeholder="Enter business registration">
                     </div>
 
                     <!-- PASSWORD -->
                     <div class="mb-3">
                         <label class="form-label input-label">Desired Password *</label>
-                        <input type="password" class="form-control auth-input" placeholder="Enter password">
+                        <input id="password" type="password" class="form-control auth-input"
+                            placeholder="Enter password">
                     </div>
 
                     <!-- CONFIRM PASSWORD -->
                     <div class="mb-3">
                         <label class="form-label input-label">Confirm Password *</label>
-                        <input type="password" class="form-control auth-input" placeholder="Confirm password">
+                        <input id="confirmPassword" type="password" class="form-control auth-input"
+                            placeholder="Confirm password">
                     </div>
 
-
+                    <!-- TERMS -->
                     <div class="form-check mt-3 mb-3">
                         <input class="form-check-input" type="checkbox" id="termsCheck">
                         <label class="form-check-label small" for="termsCheck">
@@ -95,20 +109,31 @@
                         </label>
                     </div>
 
+                    <!-- SUBMIT BUTTON -->
                     <button type="submit" class="btn auth-btn w-100 mb-3">Sign Up</button>
 
                     <p class="auth-bottom-text text-center">
                         Already have an account? <a href="./Sign-in.html">Sign In</a>
                     </p>
                 </form>
+
             </div>
         </div>
 
         <!-- Right Side Image -->
         <div class="auth-image d-none d-md-block"></div>
+
     </div>
 
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
+    <!-- Validation Script -->
+    <script src="./js/validation.js"></script>
+
 </body>
 
 </html>
