--- a/Sign-in.html
+++ b/Sign-in.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,55 +17,57 @@
     <link rel="stylesheet" href="./css/sign_in.css">
 
 </head>
+
 <body>
 
-<div class="auth-wrapper container-fluid">
+    <div class="auth-wrapper container-fluid">
 
-    <div class="auth-left d-flex align-items-center justify-content-center">
-        <div class="auth-container text-center">
+        <div class="auth-left d-flex align-items-center justify-content-center">
+            <div class="auth-container text-center">
+                <a href="./index.html">
+                    <img src="./images/logo.png" class="auth-logo" alt="Quote Green Logo">
+                </a>
+                <h2 class="auth-title">Sign In to Quote Green</h2>
+                <p class="auth-subtitle">Enter your credentials to continue</p>
 
-            <img src="./images/logo.png" class="auth-logo" alt="Quote Green Logo">
+                <form class="w-100">
 
-            <h2 class="auth-title">Sign In to Quote Green</h2>
-            <p class="auth-subtitle">Enter your credentials to continue</p>
+                    <div class="mb-3 text-start">
+                        <label class="form-label auth-label">Email Address *</label>
+                        <input type="email" class="form-control auth-input" placeholder="john.doe@companyname.com">
+                    </div>
 
-            <form class="w-100">
+                    <div class="mb-2 text-start">
+                        <label class="form-label auth-label">Password *</label>
+                        <input type="password" class="form-control auth-input" placeholder="Enter password">
+                    </div>
 
-                <div class="mb-3 text-start">
-                    <label class="form-label auth-label">Email Address *</label>
-                    <input type="email" class="form-control auth-input" placeholder="john.doe@companyname.com">
-                </div>
+                    <div class="d-flex justify-content-between align-items-center mb-3">
+                        <label class="auth-remember-label">
+                            <input type="checkbox" class="form-check-input me-2"> Remember me
+                        </label>
+                        <a href="./Forget-pswrd.html" class="auth-forgot">Forgot password?</a>
+                    </div>
 
-                <div class="mb-2 text-start">
-                    <label class="form-label auth-label">Password *</label>
-                    <input type="password" class="form-control auth-input" placeholder="Enter password">
-                </div>
+                    <button type="submit" class="auth-btn">Sign In</button>
 
-                <div class="d-flex justify-content-between align-items-center mb-3">
-                    <label class="auth-remember-label">
-                        <input type="checkbox" class="form-check-input me-2"> Remember me
-                    </label>
-                    <a href="./Forget-pswrd.html" class="auth-forgot">Forgot password?</a>
-                </div>
+                    <p class="auth-bottom-text mt-3">
+                        Don’t have an account? <a href="./Sign-Up.html">Sign Up</a>
+                    </p>
 
-                <button type="submit" class="auth-btn">Sign In</button>
+                </form>
 
-                <p class="auth-bottom-text mt-3">
-                    Don’t have an account? <a href="./Sign-Up.html">Sign Up</a>
-                </p>
-
-            </form>
-
+            </div>
         </div>
+
+        <div class="auth-image"></div>
+
     </div>
 
-    <div class="auth-image"></div>
 
-</div>
-
-
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
+
 </html>
