--- a/index.html
+++ b/index.html
@@ -58,42 +58,42 @@
     </nav>
 
     <!-- ================= HERO SECTION ================= -->
- <!-- ================= HERO SECTION ================= -->
-<section class="hero-banner">
+    <!-- ================= HERO SECTION ================= -->
+    <section class="hero-banner">
 
-    <!-- Background Color Left + Image Right -->
-    <div class="hero-bg"></div>
-    <div class="hero-img-box">
-        <img src="./images/banner_left_img.png" alt="Worker" class="hero-img">
-    </div>
-
-    <!-- TEXT IN CONTAINER ONLY -->
-    <div class="container">
-        <div class="hero-content">
-
-            <p class="hero-tag">WELCOME TO QUOTE GREEN</p>
-
-            <h1 class="hero-title">
-                The Easiest Sales Tool For An Outdoor Service Company
-            </h1>
-
-            <p class="hero-desc">
-                Libero vehicula erat est vivamus donec netus dapibus nibh elementum penatibus.
-                Elit cursus enim ipsum.
-            </p>
-
-            <form class="hero-form">
-                <div class="input-wrapper">
-                    <span class="icon"><i class="bi bi-envelope"></i></span>
-                    <input type="email" class="form-control" placeholder="Enter email address">
-                    <button class="btn-yellow" type="button">Get Pricing</button>
-                </div>
-            </form>
-
+        <!-- Background Color Left + Image Right -->
+        <div class="hero-bg"></div>
+        <div class="hero-img-box">
+            <img src="./images/banner_left_img.png" alt="Worker" class="hero-img">
         </div>
-    </div>
 
-</section>
+        <!-- TEXT IN CONTAINER ONLY -->
+        <div class="container">
+            <div class="hero-content">
+
+                <p class="hero-tag">WELCOME TO QUOTE GREEN</p>
+
+                <h1 class="hero-title">
+                    The Easiest Sales Tool For An Outdoor Service Company
+                </h1>
+
+                <p class="hero-desc">
+                    Libero vehicula erat est vivamus donec netus dapibus nibh elementum penatibus.
+                    Elit cursus enim ipsum.
+                </p>
+
+                <form class="hero-form">
+                    <div class="input-wrapper">
+                        <span class="icon"><i class="bi bi-envelope"></i></span>
+                        <input type="email" class="form-control" placeholder="Enter email address">
+                        <button class="btn-yellow" type="button">Get Pricing</button>
+                    </div>
+                </form>
+
+            </div>
+        </div>
+
+    </section>
 
 
 
@@ -480,7 +480,8 @@
                     <div id="faq1" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                         <div class="accordion-body">
                             We use map-based measurement tools and pre-set pricing rules set by your business.
-Once a customer enters their address, our system automatically measures the area and generates an instant quote—no manual estimating required.
+                            Once a customer enters their address, our system automatically measures the area and
+                            generates an instant quote—no manual estimating required.
                         </div>
                     </div>
                 </div>
@@ -495,7 +496,7 @@ Once a customer enters their address, our system automatically measures the area
                     <div id="faq2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                         <div class="accordion-body">
                             Yes. You have full control over pricing, service categories, packages and discounts.
-You can update them anytime from your dashboard.
+                            You can update them anytime from your dashboard.
                         </div>
                     </div>
                 </div>
@@ -510,7 +511,7 @@ You can update them anytime from your dashboard.
                     <div id="faq3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                         <div class="accordion-body">
                             No. Customers can enter their address, view services and pricing instantly.
-They only create an account if they want to proceed with booking.
+                            They only create an account if they want to proceed with booking.
                         </div>
                     </div>
                 </div>
@@ -524,8 +525,9 @@ They only create an account if they want to proceed with booking.
                     </h2>
                     <div id="faq4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                         <div class="accordion-body">
-                            Absolutely. We support secure online payments through credit/debit cards and popular payment gateways.
-Once paid, you receive a booking confirmation instantly.
+                            Absolutely. We support secure online payments through credit/debit cards and popular payment
+                            gateways.
+                            Once paid, you receive a booking confirmation instantly.
                         </div>
                     </div>
                 </div>
@@ -555,7 +557,8 @@ Once paid, you receive a booking confirmation instantly.
                 <div class="col-md-4 mb-4 mb-md-0 text-md-start text-center">
                     <h6 class="footer-title mb-3 fw-semibold">General</h6>
                     <ul class="list-inline mb-0 footer-inline-links">
-                        <li class="list-inline-item"><a href="./index.html" class="footer-link active-link">Home</a></li>
+                        <li class="list-inline-item"><a href="./index.html" class="footer-link active-link">Home</a>
+                        </li>
                         <li class="list-inline-item"><a href="#" class="footer-link">About</a></li>
                         <li class="list-inline-item"><a href="./Contact.html" class="footer-link">Contact us</a></li>
                         <li class="list-inline-item"><a href="#" class="footer-link">Course</a></li>
@@ -597,8 +600,12 @@ Once paid, you receive a booking confirmation instantly.
 
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"
+        integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
